added maven build plugin

--- a/ci-cd/pom.xml
+++ b/ci-cd/pom.xml
@@ -6,6 +6,24 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ci-cd</name>
 	<description>ci-cd</description>
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 
 	<dependencies>
 		<!-- Selenium WebDriver -->
