--- a/.github/workflows/testng.yml
+++ b/.github/workflows/testng.yml
@@ -1,1 +1,28 @@
+name: TestNG Tests
+   
+on:
+  push:
+    branches:
+      - master  # Replace with the appropriate branch name
 
+jobs:
+  test:
+    runs-on: ubuntu-latest
+       
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Set up JDK
+      uses: actions/setup-java@v2
+      with:
+        java-version: 11
+
+    - name: Build and Run Tests
+      run: mvn clean test
+
+    - name: Post TestNG Results
+      uses: dorny/test-reporter@v1
+      with:
+        name: TestNG Results
+        path: test-output/emailable-report.html
