--- a/.github/workflows/testng.yml
+++ b/.github/workflows/testng.yml
@@ -3,7 +3,7 @@ name: TestNG Tests
 on:
   push:
     branches:
-      - main  # Replace with the appropriate branch name
+      - master  # Replace with the appropriate branch name
 
 jobs:
   test:
