--- a/.github/workflows/testng.yml
+++ b/.github/workflows/testng.yml
@@ -12,7 +12,9 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
-
+      with:
+          ref: ${{ github.sha }}
+ 
     - name: Set up JDK
       uses: actions/setup-java@v2
       with:
